# temporal-mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  README.md  SECURITY.md  docker-compose.yml  populate_test_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  test.py  test_server.py
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  docker-scout.yml  labels.yml  lint.yml  osv-scanner-pr.yml  osv-scanner-scheduled.yml  publish.yml  release.yml  security.yml  test.yml
temporal_mcp/: __init__.py  __main__.py  activities.py  client.py  server.py  worker.py  workflows.py
temporal_mcp/handlers/: __init__.py  activity_handlers.py  batch_handlers.py  query_handlers.py  schedule_handlers.py  workflow_handlers.py
temporal_mcp/tools/: __init__.py  tool_definitions.py
temporal_mcp/utils/: __init__.py  exceptions.py
tests/: conftest.py  test_activity_handlers.py  test_batch_handlers.py  test_client.py  test_error_handling.py  test_main.py  test_query_handlers.py  test_schedule_handlers.py  test_workflow_handlers.py
