[project]
name = "temporal-mcp-server"
version = "0.1.0"
description = "MCP server for Temporal workflow orchestration"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.5.0",
    "mcp>=0.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["temporal_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning"
]
