[project]
name = "temporal-mcp-server"
version = "1.0.1"
description = "MCP server for Temporal workflow orchestration"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Mike Toscano", email = "mike@miketoscano.com"},
]
keywords = ["temporal", "mcp", "model-context-protocol", "workflow", "orchestration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "temporalio>=1.5.0",
    "mcp>=0.9.0",
    "asyncio-atexit>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/GethosTheWalrus/temporal-mcp"
Repository = "https://github.com/GethosTheWalrus/temporal-mcp"
Issues = "https://github.com/GethosTheWalrus/temporal-mcp/issues"

[project.scripts]
temporal-mcp-server = "temporal_mcp.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["temporal_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = true

[tool.black]
line-length = 200
target-version = ["py310"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
